--- a/android/app/src/main/res/layout/lesson_item.xml
+++ b/android/app/src/main/res/layout/lesson_item.xml
@@ -9,25 +9,28 @@
     android:layout_marginBottom="4dp"
     android:background="@drawable/lesson_item_bg">
 
-    <TextView
-        android:id="@+id/lesson_num"
-        android:layout_width="37dp"
-        android:layout_height="match_parent"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        android:gravity="center" />
-
     <LinearLayout
-        android:layout_width="32dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:minWidth="50dp">
+
+        <TextView
+            android:id="@+id/lesson_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:gravity="center" />
 
         <TextView
             android:id="@+id/lesson_time_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/darker_gray"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            android:layout_marginTop="2dp" />
 
         <TextView
             android:id="@+id/lesson_time_end"
@@ -43,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingStart="4dp"
+        android:paddingStart="8dp"
         android:paddingEnd="4dp">
 
         <TextView
@@ -59,16 +62,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/darker_gray"
+            android:textSize="10sp"
+            android:layout_marginTop="2dp" />
+
+        <TextView
+            android:id="@+id/lesson_room"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/darker_gray"
             android:textSize="10sp" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/lesson_room"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="11sp"
-        android:gravity="end" />
 
 </LinearLayout>
