--- a/android/app/src/main/res/layout/schedule_widget.xml
+++ b/android/app/src/main/res/layout/schedule_widget.xml
@@ -92,7 +92,8 @@
     <TextView
         android:id="@+id/widget_empty"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:text="Žádné hodiny"
         android:textColor="@android:color/darker_gray"
         android:textSize="12sp"
